<resources>
    <string name="app_name">Himanshu</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="robby_darling">Robby Darling</string>
    <string name="user_name">User Name</string>
    <string name="subject">Subject</string>
    <string name="qualification">Qualification</string>
    <string name="todo">TODO</string>
    <string name="view_more">View More</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>