<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    app:cardCornerRadius="20dp"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp"
    android:layout_margin="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/user_name"
                android:textColor="@color/blue"
                android:textSize="17sp"
                android:textStyle="bold" />

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject"
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/symbol"
        android:layout_width="4dp"
        android:layout_height="8dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="7dp"
        android:src="@drawable/ic_baseline_circle_24"
        android:textColor="@color/black"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_marginStart="5dp"
        android:id="@+id/qualification"
        android:singleLine="true"
        android:ellipsize="end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/qualification"
        android:textColor="@color/black" />

</LinearLayout>

            <Button
                android:id="@+id/btnviewmore"
                android:layout_width="137dp"
                android:layout_height="36dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btncolor"
                android:backgroundTint="@color/blue2"
                android:text="@string/view_more"
                android:textAllCaps="false"
                android:textColor="@color/white">

            </Button>
        </LinearLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageview"
            android:layout_width="100dp"
            android:scaleType="fitCenter"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@color/imagebgcolor2"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent"
            android:layout_marginEnd="10dp"
            android:src="@drawable/image" />
    </LinearLayout>
</androidx.cardview.widget.CardView>